# gemini-pipeline-agent

./: HACKATHON.md  README.md  pyproject.toml
app/: dashboard.py
scripts/: build_demo_video.py
src/gemini_pipeline_agent/: __init__.py  agent.py  mcp_stub.py  runner.py
tests/: test_agent_build.py  test_mcp_stub.py
